feat(task-api): show list of tasks, filterable
